Updated all information on website, updated background picture, fixed alignment bugs

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1599,7 +1599,7 @@
 			}
 
 	#header-wrapper {
-		background: url("../../images/banner.jpg") center center;
+		background: url("../../images/background.jpg") center center;
 		background-size: cover;
 	}
 
@@ -1704,24 +1704,25 @@
 /* Logo */
 
 	#logo h1 {
-		font-weight: 900;
+		font-weight: 700;
 		text-transform: uppercase;
 		color: #fff;
 	}
 
 	#logo p {
 		color: #eee;
-		color: rgba(255, 255, 255, 0.5);
+		color: rgb(255, 255, 255);
 		text-transform: uppercase;
 	}
 
 /* Intro */
 
 	#intro > .style2 {
-		font-weight: 700;
+		font-weight: 400;
 		color: #fff;
 		border-radius: 0.35em;
-		box-shadow: inset 0px 0px 1px 1px rgba(255, 255, 255, 0.25);
+		box-shadow: inset 0px 0px 1px 1px rgba(255, 255, 255,1);
+		padding: 30px;
 	}
 
 		#intro > .style2 a {
@@ -2018,8 +2019,9 @@
 				#nav > ul {
 					display: inline-block;
 					border-radius: 0.35em;
-					box-shadow: inset 0px 0px 1px 1px rgba(255, 255, 255, 0.25);
+					box-shadow: inset 0px 0px 1px 1px rgba(255, 255, 255, 0.7);
 					padding: 0 1.5em 0 1.5em;
+					background: rgba(44, 50, 63, 0.5)
 				}
 
 					#nav > ul > li {
@@ -2233,6 +2235,7 @@
 			#footer-wrapper hr {
 				margin: 3em 0 3em 0;
 			}
+
 
 		/* Header */
 
@@ -2655,6 +2658,7 @@
 
 			#content {
 				padding: 0 0 2em 0;
+				margin: 0;
 			}
 
 				#content header.style1 {
@@ -2693,18 +2697,17 @@
 /* Additional CSS */ 
 
 .block {
-	width: 90%;
-	display: inline-block;
+	width: 40%;
 	position: relative;
-	left: 5%;
-	margin-bottom: 50px;
+	top: 0px;
+	margin: 0px 30px 0px 30px;
+	display: inline-block;
+	vertical-align: top;
 }
 
 .profile-block {
-	width: 33%;
-	margin-right: 50px;
+	width: 100%;
 	display: inline-block;
-
 }
 
 img.profile {
@@ -2714,16 +2717,23 @@ img.profile {
 }
 
 .profile-title {
-	font-size: 1.3em;
+	font-size: 1.5em;
+	padding-top: 10px;
 }
 
 .profile-content {
-	width: 60%;
+	width: 100%;
 	background-color: #DDDDDD;
 	color: #555555;
 	display: inline-block;
 	border-radius: 20px;
 	padding: 20px;
+}
+
+.profile-content > p
+{
+	font-family: 'Crimson Text', serif;
+	font-weight: 400;
 }
 
 .content-block {
@@ -2733,6 +2743,7 @@ img.profile {
 	border-radius: 30px;
 	padding: 30px;
 	border: 5px solid #222835;
+	margin-top: 30px;
 }
 
 #logo {
@@ -2740,4 +2751,21 @@ img.profile {
 	bottom: 50px;
 	font-size: 1.5em;
 	color: white;
+}
+.bio {
+	display: show;
+}
+
+.content-block > h1 {
+	font-size: 1.5em;
+	color: #e97770;
+}
+#head {
+	font-family: 'Crimson Text', serif;
+	font-size: 3em;
+	float: top;
+}
+
+hr {
+	margin-top: 10px;
 }
